# NetWatch

./: README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
.github/workflows/: cross-platform.yml
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: connections.rs  export.rs  mod.rs
src-tauri/src/models/: connection.rs
src-tauri/src/services/: connections_linux.rs  connections_macos.rs  connections_windows.rs  mod.rs
src-tauri/src/utils/: logger.rs
src/api/: tauri.ts
src/components/: AppShell.tsx  AppSidebar.tsx  ConnectionsTable.tsx  EmptyState.tsx  ErrorBanner.tsx  FiltersBar.tsx  Pagination.tsx  ProcessesTable.tsx  RecentChangesList.tsx  RemotePortsList.tsx  RiskBadge.tsx  StatusDot.tsx  SummaryCard.tsx  TopBar.tsx
src/components/ui/: calendar.tsx
src/data/: mockData.ts
src/hooks/: useKeyboardShortcuts.ts
src/lib/: logger.ts
src/pages/: About.tsx  Connections.tsx  Dashboard.tsx  ProcessDetails.tsx
src/types/: netwatch.ts
